[tool.poetry]
name = "autocontract"
version = "0.1.0"
description = ""
authors = ["P3rdigas <pr.perdigao@campus.fct.unl.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-docx = "^1.1.0"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
customtkinter = "^5.2.2"
ctkmenubar = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
